# chat-oss

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
api/: main.py
core/: Cargo.toml
core/src/: lib.rs
core/src/agent/: mod.rs
core/src/ollama/: client.rs  mod.rs  types.rs
core/src/storage/: mod.rs
core/src/tools/: calc.rs  datetime.rs  fs.rs  mod.rs  registry.rs  shell.rs  web.rs
core/tests/: live_ollama.rs
docs/: PROJECT_CONTEXT.md  ROADMAP.md
scripts/: _lib.sh  check.sh  release.sh  reset-db.sh  run.sh  setup.sh  test.sh
ui/: Cargo.toml
ui/src/: app.rs  bridge.rs  main.rs
